# nebel

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: benchmark.yml  ci.yml  verification.yml
data/: benchmark.json  verification.json
scripts/: download_sift.sh
src/: apply.rs  compaction.rs  context.rs  dataset.rs  db.rs  eval.rs  filter.rs  handle.rs  lib.rs  main.rs  metadata.rs  search.rs  segment.rs  snapshot.rs  storage.rs  types.rs  wal.rs
tests/: integration.rs
