[package]
name = "nebel"
version = "0.1.0"
edition = "2024"

[lib]
name = "nebel"
path = "src/lib.rs"

[[bin]]
name = "nebel"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
hnsw_rs = "0.3"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
