[package]
name = "nebel"
version = "0.1.0"
edition = "2024"

[lib]
name = "nebel"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["testing"]

[[bin]]
name = "verify"
path = "src/bin/verify.rs"
required-features = ["testing"]

[features]
testing = []

[dev-dependencies]
nebel = { path = ".", features = ["testing"] }
tempfile = "3"

[dependencies]
tempfile = "3"
hnsw_rs = "0.3"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
